tests/sksl/errors/VectorInlinedIndexOutOfRange.glsl
### Compilation failed:

error: 11: index -1 out of range for 'int3'
    int undefined = indexVector(-1) + indexVector(3);
                    ^^^^^^^^^^^^^^^
error: 11: index 3 out of range for 'int3'
    int undefined = indexVector(-1) + indexVector(3);
                                      ^^^^^^^^^^^^^^
2 errors
